--- a/www/index1.html
+++ b/www/index1.html
@@ -65,6 +65,9 @@
         </li>   
     </ul>
 
+<button onclick="location.href='index.html'">Salir</button>
+
+                 
 
 <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 <script>
