Mejoras visuales al chat
Mejoras visuales al chat

--- a/www/index.html
+++ b/www/index.html
@@ -162,7 +162,7 @@
   // this will print the key of a message
       });
     if(pass === contrasena && phone === telefono){
-      location.href="index1.html";
+      location.href="chat.html?nombre="+nameUser;
     }
     else{
       alert("Usuario incorrecto");
