--- a/www/chat.html
+++ b/www/chat.html
@@ -1,59 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<!--
-    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
 
 <head>
+
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <!-- Good default declaration:
-    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-    -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
 
-    <title>Chat Arqui</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	
+	<meta name="description" content="Simple Chat Room">
+	<link href='http://fonts.googleapis.com/css?family=Gorditas:700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style1.css">
+	<title>Chat</title>
 </head>
 
 <body>
+	<header>
+		<h1>Chat Arquitectura de aplicaciones</h1>
+	</header>
+
+
+
+    <!-- Diseño Chat -->
     <form action="">
-        <div>
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre">
-        </div>
-        <div>
-            <label for="mensaje">Mensaje</label>
-            <textarea id="mensaje"></textarea>
-        </div>
-        <button type="button" id="btnEnviar">Enviar</button>
+    <section id="main" role="main">
+            Nombre:<input type="text" id="nombre" readOnly="readOnly"/>    	
+	</section>
+	<section id="main" role="main">
+		<div id="chat">
+			<i id="avatar" class="face12"></i><input type="text" id="mensaje" placeholder="Ingrese su mensaje" required/>
+		</div>
+		<button type="button" id="btnEnviar">Enviar Mensaje</button>
+ 		
+
+	</section>
     </form>
 
     <ul id="chatUl">
@@ -65,13 +54,18 @@
         </li>   
     </ul>
 
-<button onclick="location.href='index.html'">Salir</button>
 
-                 
+	<footer></footer>
+	<!-- Diseño Chat -->
 
+    <button onclick="location.href='index.html'">Salir</button>
+
+<script src="http://cdn.pubnub.com/pubnub.min.js"></script>
+<script src="js/app.js"></script>             
 <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 <script>
   // Initialize Firebase
+
   var config = {
     apiKey: "AIzaSyAwWIexKZTRv-psxcmeY1RZGGfFY4a5WB8",
     authDomain: "prueba-52499.firebaseapp.com",
@@ -86,6 +80,26 @@
   var txtMensaje = document.getElementById('mensaje');
   var btnEnviar = document.getElementById('btnEnviar');
   var chatUl = document.getElementById('chatUl');
+  var paramstr = window.location.search.substr(1);
+  var paramarr = paramstr.split ("&");
+  var params = {};
+
+    for ( var i = 0; i < paramarr.length; i++) {
+		var tmparr = paramarr[i].split("=");
+		params[tmparr[0]] = tmparr[1];
+    }
+	if (params['nombre']) {
+		txtNombre.value = params['nombre'];
+	} else {
+		txtNombre.value = "desconocido";
+	}
+
+
+  
+
+
+
+
 
   btnEnviar.addEventListener("click",function(){
     var nombre = txtNombre.value;
@@ -115,6 +129,16 @@
     <script type="text/javascript">
         app.initialize();
     </script>
-</body>
+</body>	
+
+
+
+
+
+
+
+
+
+
 
 </html>
