--- a/www/chat.html
+++ b/www/chat.html
@@ -25,7 +25,7 @@
 
 <body>
 	<header>
-		<h1>Chat Arquitectura de aplicaciones</h1>
+		<h1>Chat</h1>
 	</header>
 
 
@@ -104,6 +104,7 @@
   btnEnviar.addEventListener("click",function(){
     var nombre = txtNombre.value;
     var mensaje = txtMensaje.value;
+    txtMensaje.value = "";
 
     firebase.database().ref('chat').push({
         name: nombre,
